# blockchain

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  constraints.in  constraints.txt  quickstart-laika.sh  quickstart-tlbc.sh  quickstart.sh  requirements-dev.txt  requirements.txt  setup.cfg
.circleci/: config.yml  show-docker-tree
auction-deploy/: Makefile  constraints.txt  pytest.ini  requirements.txt  setup.py
bridge/: .bumpversion.cfg  .env  Dockerfile  HowToRelease.md  Makefile  README.md  architecture_overview.md  constraints.txt  docker-compose.yml  requirements.in  requirements.txt  setup.cfg
bridge-deploy/: Makefile  requirements.txt  setup.py
bridge/bridge/: config.py  main.py
bridge/e2e_tests/: README.md  docker-compose-override.yml  docker-parity  env_override  run_e2e_test.sh  validator_list.csv
bridge/e2e_tests/node_config/: main_chain_spec.json  shared_config.toml  shared_key.json  shared_password  side_chain_spec.json
bridge/end2end-tests/: README.md
bridge/end2end-tests/tests/: test_transfer.py
bridge/reward-contract/: README
bridge/reward-contract/contracts/: RewardByBlock.sol
bridge/reward-contract/contracts/interfaces/: IRewardByBlock.sol
bridge/reward-contract/contracts/libs/: SafeMath.sol
bridge/src/bridge/: boot.py  confirmation_sender.py  constants.py  main.py  node_status.py  transfer_recorder.py  validator_status_watcher.py
bridge/tests/: keystore.json  password  test_config.py  test_confirmation_task_planner.py  test_contract_validation.py  test_event_fetcher.py  test_service.py  test_transfer_recorder.py  test_webservice.py
chain/: Dockerfile  HowToRelease.md  README-dev.md  client_wrapper.sh  config.toml  extract-bootnodes  observer-config.toml  parity_wrapper.sh  participant-config.toml  smoke-test.sh  tlbc-spec.json  user-config.toml  validator-config.toml
config/: extract-bootnodes  tlbc-spec.json  trustlines-spec.json  user-config.toml  validator-config.toml
contracts/: .soliumignore  .soliumrc.json  Makefile  README.md  constraints.txt  pytest.ini  (+2 more)
deploy-tools/bridge-deploy/: Makefile  README.md  setup.cfg
tools/auction-deploy/: Makefile  README.md  setup.cfg  setup.py
tools/auction-deploy/auction_deploy/: cli.py  core.py
tools/auction-deploy/scripts/: pack_contracts.py
tools/auction-deploy/src/auction_deploy/: cli.py  core.py
tools/auction-deploy/tests/: conftest.py  test_cli.py  test_deploy.py
tools/bridge/: .bumpversion.cfg  .coveragerc  .env.example  CHANGELOG.rst  Dockerfile  Makefile  README-dev.md  README.md  constraints.txt  pytest  requirements.txt  setup.cfg  setup.py
tools/bridge/bridge/: boot.py  config.py  confirmation_sender.py  confirmation_task_planner.py  constants.py  contract_abis.py  contract_validation.py  contract_validator.py  control_events.py  event_fetcher.py  events.py  main.py  node_status.py  service.py  transfer_fetcher.py  transfer_recorder.py  utils.py  validation_utils.py  validator_balance_watcher.py  validator_status_watcher.py  version.py  webservice.py
tools/bridge/docker/: docker-compose-base.yaml  docker-compose-development.yaml  docker-compose-nodes-development.yml  docker-compose-nodes-production.yml  docker-compose-production.yaml  docker-compose-redis.yml  docker-compose.yml
tools/bridge/end2end-tests/: README.md
tools/bridge/end2end-tests/tests/: test_transfer.py
tools/bridge/src/bridge/: boot.py  config.py  confirmation_sender.py  utils.py  validator_balance_watcher.py
tools/bridge/tests/: conftest.py  test_config.py  test_confirmation_sender.py  test_confirmation_task_planner.py  test_contract_validation.py  test_contract_validator.py  test_event_fetcher.py  test_main.py  test_transfer_fetcher.py  test_transfer_recorder.py  test_utils.py  test_validation_utils.py  test_validator_balance_watcher.py  test_validator_status_watcher.py
tools/quickstart/: Dockerfile  Makefile  README.md  requirements.txt  setup.cfg
tools/quickstart/quickstart/: bridge.py  cli.py  constants.py  docker.py  monitor.py  netstats.py  utils.py  validator_account.py
tools/quickstart/quickstart/configs/: laika-bridge-config.toml  laika-docker-compose.yaml
tools/quickstart/quickstart/configs/laika/: bridge-config.toml  docker-compose.yaml
tools/quickstart/quickstart/configs/tlbc/: bridge-config.toml  docker-compose.yaml
tools/quickstart/src/quickstart/: docker.py  monitor.py  netstats.py  utils.py  validator_account.py
tools/quickstart/src/quickstart/configs/laika/: docker-compose.yaml
tools/quickstart/src/quickstart/configs/tlbc/: docker-compose.yaml
tools/quickstart/tests/: test_cli.py  test_utils.py
tools/validator-set-deploy/: Makefile  README.md  setup.cfg  setup.py
tools/validator-set-deploy/scripts/: pack_contracts.py
tools/validator-set-deploy/src/validator_set_deploy/: cli.py
tools/validator-set-deploy/tests/: conftest.py  test_cli.py  test_deploy.py
tools/validator-set-deploy/validator_set_deploy/: cli.py  core.py
(+173 files in other folders)
