[metadata]
name = tlbc-bridge
version = 1.0.1-dev0
description = token bridge validator client for the Trustlines chain

[options.packages.find]
where=src

[options]
package_dir=
    =src
packages=find:

install_requires =
    click>=7.0
    attrs>=19.1
    eth-utils>=1.6.2
    gevent>=1.4
    marshmallow>=3.0.1
    toml>=0.10
    web3>=5.0,<6.0
    tenacity>=5.1.1
    setproctitle>=1.1.10
    falcon>=2.0.0

[options.entry_points]
console_scripts =
    tlbc-bridge = bridge.boot:main

[tool:pytest]
addopts = --contracts-dir ../contracts/contracts
