[tool:pytest]

[metadata]
name = bridge-deploy
version = 0.0.1
description =

[options.packages.find]
where=src

[options]
install_requires =
  click
  web3
  contract-deploy-tools
package_dir=
    =src
packages=find:


[options.entry_points]
console_scripts=
    bridge-deploy=bridge_deploy.cli:main

[options.package_data]
bridge_deploy =
  contracts.json
