[metadata]
name = auction-deploy
version = 0.0.1
description =

[options.packages.find]
where=src

[options]
install_requires =
  click
  web3
  contract-deploy-tools
  pendulum
package_dir=
    =src
packages=find:


[options.entry_points]
console_scripts=
    auction-deploy=auction_deploy.cli:main
