[metadata]
name = tlbc-bridge
version = 0.1.0
description = token bridge validator client for the Trustlines chain

[options]
install_requires =
    click>=7.0,<7.1
    attrs>=19.1,<19.2
    eth-utils>=1.6.2,<1.7
    gevent>=1.4,<1.5
    marshmallow>=3.0.1,<3.1.0
    toml>=0.10,<0.11
    web3>=5.0,<5.1
    validators>=0.13,<0.14
    tenacity>=5.1.1,<5.2
    setproctitle>=1.1.10,<1.2
    falcon>=2.0.0,<2.1

packages = bridge

[options.entry_points]
console_scripts =
    tlbc-bridge = bridge.boot:main

[flake8]
max-line-length = 119
ignore =
    # P101 format string does contain unindexed parameters
    P101
    # default:
    E121,E123,E126,E226,E24,E704,W503,W504
    # https://github.com/python/black/blob/master/README.md#slices
    E203
    # E501: line too long (black will take care of this)
    E501
