[metadata]
name = tlbc-bridge
version = 0.2.0-rc2
description = token bridge validator client for the Trustlines chain

[options]
install_requires =
    click>=7.0,<7.1
    attrs>=19.1,<19.2
    eth-utils>=1.6.2,<1.7
    gevent>=1.4,<1.5
    marshmallow>=3.0.1,<3.1.0
    toml>=0.10,<0.11
    web3>=5.0,<5.1
    tenacity>=5.1.1,<5.2
    setproctitle>=1.1.10,<1.2
    falcon>=2.0.0,<2.1

packages = bridge

[options.entry_points]
console_scripts =
    tlbc-bridge = bridge.boot:main

[tool:pytest]
addopts = --contracts-dir ../../contracts/contracts
