[metadata]
name = trustlines-quickstart
version = 0.1.0
description = short helper scripts for the quickstart script

[options]
install_requires =
  eth_account
  click
packages = quickstart

[options.entry_points]
console_scripts=
    qs-import-private-key = quickstart.cli:qs_import_private_key
    qs-import-keystore-file = quickstart.cli:qs_import_keystore_file
