[metadata]
name = trustlines-quickstart
version = 0.1.0
description = short helper scripts for the quickstart script

[options]
install_requires =
  eth_account
  click
  requests
  toml
packages = quickstart
[options.package_data]
quickstart =
  configs/**

[options.entry_points]
console_scripts=
    quickstart = quickstart.cli:main
