[metadata]
name = validator-set-deploy
version = 0.0.1
description =

[options.packages.find]
where=src

[options]
install_requires =
  click
  web3
  contract-deploy-tools
package_dir=
    =src
packages=find:


[options.entry_points]
console_scripts=
    validator-set-deploy=validator_set_deploy.cli:main

[options.package_data]
validator_set_deploy =
  contracts.json
